--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Content</th>
       <th>State</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -17,6 +17,7 @@
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mark as Doing', change_task_path(task, state: "doing"), method: :put %></td>
       </tr>
     <% end %>
   </tbody>
@@ -31,7 +32,7 @@
     <tr>
       <th>Content</th>
       <th>State</th>
-      <th colspan="3"></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
 
@@ -43,6 +44,8 @@
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mark as To Do', change_task_path(task, state: "to_do"), method: :put %></td>
+        <td><%= link_to 'Mark as Done', change_task_path(task, state: "done"), method: :put %></td>
       </tr>
     <% end %>
   </tbody>
@@ -57,7 +60,7 @@
     <tr>
       <th>Content</th>
       <th>State</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -69,6 +72,7 @@
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mark as Doing', change_task_path(task, state: "doing"), method: :put %></td>
       </tr>
     <% end %>
   </tbody>
