--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,59 +1,15 @@
-<h1>To Do</h1>
+<div class="row">
+<div class="col-md-4"><h2 class="text-center">To Do</h2>
+<%= render @to_do %>
+</div>
+<div class="col-md-4"><h2 class="text-center">Doing</h2>
+<%= render @doing %>
+</div>
+<div class="col-md-4"><h2 class="text-center">Done</h2>
+<%= render @done %>
+</div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>State</th>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-   <%= render @to_do %>
-  </tbody>
-</table>
 
 <br>
-
-<h1>Doing</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>State</th>
-      <th colspan="5"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <%= render @doing %>
-  </tbody>
-</table>
-
-<br>
-
-<h1>Done</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>State</th>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-   <%= render @done %>
-  </tbody>
-</table>
-
-<br>
-
-
-
-
-
 <%= link_to 'New Task', new_task_path %>
