--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "<i class='fa fa-circle-o-notch'></i>  Stukdo".html_safe, root_path, class: "navbar-brand" %>
+      <%= link_to "<i class='fa fa-circle-o-notch'></i>  eTrello".html_safe, root_path, class: "navbar-brand" %>
     </div>  
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
